--- a/Biblioteka2022/MainWindow.xaml
+++ b/Biblioteka2022/MainWindow.xaml
@@ -20,7 +20,7 @@
                             </ComboBox>
                         </Grid>
                         <Grid Margin="10,60,10,10" VerticalAlignment="Bottom">
-                            <ComboBox Width="100                                  " Height="30" Margin="10,10,10,10" HorizontalAlignment="Left">
+                            <ComboBox Width="100" Height="30" Margin="10,10,10,10" HorizontalAlignment="Left">
                                 <ComboBoxItem Content="Imie" FontSize="18"/>
                             </ComboBox>
                             <ComboBox Width="190" Height="30" Margin="115,10,0,10" HorizontalAlignment="Left">
@@ -45,7 +45,21 @@
                 <Grid Background="#FFE5E5E5">
                     <TabControl>
                         <TabItem Header="Wyporzyczenia">
-                            
+                            <Grid Background="#FFE5E5E5">
+                                <ComboBox Width="300" Height="30" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">
+
+                                </ComboBox>
+                                <ComboBox Width="300" Height="30" Margin="10,50,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">
+
+                                </ComboBox>
+                                <Label FontSize="18" Margin="10,90,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">Data wyporzyczenia</Label>
+                                <DatePicker Width="250" Height="30" Margin="200,90,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Label FontSize="18" Margin="10,140,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">Data zwrotu</Label>
+                                <DatePicker Width="250" Height="30" Margin="200,140,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+                                <Button Width="250" Height="30" Margin="10,200,10,10" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14">Dodaj</Button>
+                            </Grid>
+                           
                         </TabItem>
                         <TabItem Header="Klienci">
 
