--- a/Biblioteka2022/MainWindow.xaml
+++ b/Biblioteka2022/MainWindow.xaml
@@ -13,7 +13,7 @@
                     <Grid Margin="10,10,10,10" Background="#FFFFFF" VerticalAlignment="Top" >
                         <Grid Margin="10,10,10,60" VerticalAlignment="Top">
                             <Label FontSize="24" Margin="10,10,10,10" HorizontalAlignment="Left">Wyświetlaj z</Label>
-                            <ComboBox x:Name="input_wyswietl_tabela" Width="230" Height="30" Margin="160,10,10,10" HorizontalAlignment="Left">
+                            <ComboBox x:Name="input_wyswietl_tabela" Width="230" Height="30" Margin="160,10,10,10" HorizontalAlignment="Left" SelectionChanged="input_wyswietl_tabela_SelectionChanged">
                                 <ComboBoxItem Content="Wypożyczenia" FontSize="18" IsSelected="True"/>
                                 <ComboBoxItem Content="Klienci" FontSize="18"/>
                                 <ComboBoxItem Content="Ksiązki" FontSize="18"/>
@@ -29,7 +29,7 @@
                                 <ComboBoxItem Content="Zawiera" FontSize="18"/>
                             </ComboBox>
                             <TextBox x:Name="input_wyswietl_filtr" Width="190" Height="30" Margin="310,10,0,10" HorizontalAlignment="Left"></TextBox>
-                            <Button Width="150" Height="30" HorizontalAlignment="Right" Margin="10,10,10,10" FontSize="18">Szukaj</Button>
+                            <Button Width="150" Height="30" HorizontalAlignment="Right" Margin="10,10,10,10" FontSize="18" Click="button_wyswietl_szukaj_Click">Szukaj</Button>
                         </Grid>
                     </Grid>
                     <RichTextBox x:Name="textbox_wyswietl" Margin="10,150,10,10" FontSize="18">
