Poprawnosc wprowadzania ksiazki

--- a/Biblioteka2022/MainWindow.xaml
+++ b/Biblioteka2022/MainWindow.xaml
@@ -55,7 +55,8 @@
                                 <DatePicker x:Name="input_wyporzyczenia_datawyporzyczenia" Width="250" Height="30" Margin="200,90,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                                 <Label FontSize="18" Margin="10,140,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">Data zwrotu</Label>
                                 <DatePicker x:Name="input_wyporzyczenia_datazwrot" Width="250" Height="30" Margin="200,140,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-
+                                
+                                <Label x:Name="label_wyporzyczenia" Content="." VerticalAlignment="Top" Height="30" Margin="0,240,0,0" Width="500" HorizontalAlignment="Left" />
                                 <Button x:Name="button_wyporzyczenia_dodaj" Width="250" Height="30" Margin="10,200,10,10" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14">Dodaj</Button>
                             </Grid>
                            
@@ -74,6 +75,7 @@
                                 <Label FontSize="18" Margin="10,130,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">Telefon</Label>
                                 <TextBox x:Name="input_klient_telefon" Width="250" Height="30" Margin="200,130,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
+                                <Label x:Name="label_klient" Content="." VerticalAlignment="Top" Height="30" Margin="0,240,0,0" Width="500" HorizontalAlignment="Left" />
                                 <Button x:Name="button_klient_dodaj" Width="250" Height="30" Margin="10,200,10,10" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14">Dodaj</Button>
                             </Grid>
                             
@@ -93,7 +95,8 @@
                                 <Label FontSize="18" Margin="10,130,10,10" HorizontalAlignment="Left" VerticalAlignment="Top">Rok Wydania</Label>
                                 <TextBox x:Name="input_ksiazki_wydanie" Width="80" Height="30" Margin="200,130,10,10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
-                                <Button x:Name="button_ksiazki_dodaj" Width="250" Height="30" Margin="10,200,10,10" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14">Dodaj</Button>
+                                <Label x:Name="label_ksiazki" Content="." VerticalAlignment="Top" Height="30" Margin="0,240,0,0" Width="500" HorizontalAlignment="Left" />
+                                <Button x:Name="button_ksiazki_dodaj" Width="250" Height="30" Margin="10,200,10,10" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14" Click="button_ksiazki_dodaj_Click">Dodaj</Button>
                             </Grid>
                             
                         </TabItem>
